# FLang

./: .classpath  .gitignore  .project  FLang.cabal  build.sbt  pom.xml  scala
doc/: algs  names  phases  todo  todo.txt
example/: 001.fp  list.fp  ord.fp  qsort.fp  simple.fp
hs/: Common.h  Common.hs  Lexer.hs  Lexicon.hs  Main.hs  Monad.hs  Parser.hs  Qual.h  Syntax.hs  Token.hs
hs/Common/: IO.hs
src/: Annotation.hs  Cleanup.hs  Common.hs  Import.hs  Infix.hs  Lexer.hs  Main.hs  Monad.hs  Parser.hs  Pretty.hs  Renamer.hs  Resolver.hs  Syntax.hs  Token.hs  Types.hs  Util.hs
src/Annotation/: Demo.hs  Internal.hs
src/Common/: IO.hs
src/Infix/: Types.hs
src/Monad/: Accum.hs
src/Monad/Accum/: Internal.hs
src/Pretty/: Internal.hs
src/Renamer/: Sorter.hs  Types.hs
src/Syntax/: Decl.hs  HasBindNames.hs  Pretty.hs  Traverse.hs  Types.hs  Util.hs
src/Syntax/Traverse/: Types.hs
src/main/scala/net/karlv/flang/: Main.scala  TreeFormatter.scala  Util.scala
src/main/scala/net/karlv/flang/ast/: BindName.scala  Binder.scala  Case.scala  Data.scala  Do.scala  Infix.scala  ModDecl.scala  Open.scala  Pat.scala  SigDecl.scala  TyCompOp.scala  TyDecl.scala  TyExpr.scala  Universe.scala  ValDecl.scala  ValExpr.scala
src/main/scala/net/karlv/flang/compile/: Env.scala  Interpreter.scala  NameResolver.scala  SyntaxChecker.scala
src/main/scala/net/karlv/flang/parser/: FToken.scala  Lexicon.scala  Syntax.scala
src/net/karlv/flang/: Error.scala  F.g  Main.scala  Test.scala  TreePrinter.scala  Util.scala
src/net/karlv/flang/ast/: App.scala  Bind.scala  BindModule.scala  BindSig.scala  BindVal.scala  Binder.scala  Case.scala  Common.scala  Data.scala  Decl.scala  Do.scala  DoBind.scala  DoElem.scala  DoExpr.scala  DoLet.scala  ERef.scala  Expr.scala  File.scala  FileBind.scala  GenModPrim.scala  GenModule.scala  IdDecl.scala  IdRef.scala  Infix.scala  KTree.scala  Lam.scala  LamCase.scala  Let.scala  Lift.scala  LocalBind.scala  ModDecl.scala  ModRef.scala  Module.scala  Name.scala  OpChain.scala  Open.scala  Pat.scala  PatApp.scala  PatBind.scala  Prim.scala  (+21 more)
src/net/karlv/flang/compile/: Interpreter.scala  NameResolver.scala  TypeCheck.scala  TypeChecker.scala
src/net/karlv/flang/parser/: FToken.scala  Lexer.scala  Lexicon.scala  Syntax.scala  Token.scala
