
name:           FLang
version:        0.0.1
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL-3
license-file:   LICENSE.txt
copyright:      (c) 2012 Karl Voelker
author:         Karl Voelker
maintainer:     ktvoelker@gmail.com
stability:      experimental
bug-reports:    mailto:ktvoelker@gmail.com
synopsis:       The F Programming Language
category:       Language
tested-with:    GHC == 7.4.2

Executable fc
  main-is:          Main.hs
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
  build-depends:
    base                 >= 4    && < 5,
    containers           >= 0.4  && < 0.6,
    text                 >= 0.11 && < 0.12,
    parsec               >= 3.1  && < 3.2,
    mtl                  >= 2.1  && < 2.2,
    pretty-show          >= 1.2  && < 1.3,
    data-lens            >= 2.10 && < 2.11,
    data-lens-fd         >= 2.0  && < 2.1,
    data-lens-template   >= 2.1  && < 2.2,
    template-haskell     >= 2.7  && < 2.9,
    comonad-transformers >= 3.0 && < 3.1
  default-extensions:
    NoImplicitPrelude
    TupleSections
    MultiParamTypeClasses
    FunctionalDependencies
    ScopedTypeVariables
    FlexibleInstances
    FlexibleContexts
    TypeFamilies
    StandaloneDeriving
  other-extensions:
    TemplateHaskell
    UndecidableInstances

